<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/exchange"
        android:checked="true"
        android:icon="@drawable/ic_money_black_24dp"
        android:title="@string/currencies"/>

    <item
        android:id="@+id/history"
        android:icon="@drawable/ic_list_all_black_24dp"
        android:title="@string/story"/>

    <item
        android:id="@+id/analysis"
        android:icon="@drawable/ic_show_chart_black_24dp"
        android:title="@string/plot"/>

</menu>